--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --mode development",
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "vant": "^3.5.0",
     "vue": "^3.2.13",
@@ -16,6 +17,8 @@
     "@vue/cli-plugin-babel": "^5.0.4",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "babel-plugin-import": "^1.13.5"
+    "babel-plugin-import": "^1.13.5",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0"
   }
 }
