--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "fastclick": "^1.0.6",
     "vant": "^3.5.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
