--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.6",
     "fastclick": "^1.0.6",
-    "vant": "^3.5.0",
+    "vant": "^4.0.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
@@ -18,8 +19,11 @@
     "@vue/cli-plugin-babel": "^5.0.4",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "babel-plugin-import": "^1.13.5",
     "less": "^4.1.3",
-    "less-loader": "^11.0.0"
+    "less-loader": "^11.0.0",
+    "postcss-pxtorem": "^6.0.0",
+    "unplugin-auto-import": "^0.12.0",
+    "unplugin-vue-components": "^0.22.11",
+    "vue-router-auto": "^2.0.0"
   }
 }
