--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "core-js": "^3.8.3",
     "dayjs": "^1.11.6",
     "fastclick": "^1.0.6",
+    "ip": "^1.1.8",
     "vant": "^4.0.2",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^5.0.4",
@@ -22,7 +24,7 @@
     "compression-webpack-plugin": "^10.0.0",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
-    "postcss-pxtorem": "^6.0.0",
+    "postcss-px-to-viewport": "^1.1.1",
     "unplugin-auto-import": "^0.12.0",
     "unplugin-vue-components": "^0.22.11",
     "vue-router-auto": "^2.0.0"
