--- a/jsconfig.json
+++ b/jsconfig.json
@@ -8,6 +8,7 @@
       "@/*": ["src/*"]
     },
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"],
-    "jsx": "preserve"
+    "jsx": "preserve",
+      "allowJs": true,
   }
 }
